src/main/java/legacymodernizer/parser/antlr/c/preprocessor/CPreprocessorParser.java
// Generated from antlr-grammars/CPreprocessorParser.g4 by ANTLR 4.13.2

package legacymodernizer.parser.antlr.c.preprocessor;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CPreprocessorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HASHHASH=1, HASH=2, DEFINE=3, ELLIPSIS=4, LPAREN=5, RPAREN=6, COMMA=7,
		STRING_LITERAL=8, CHARACTER_CONSTANT=9, PP_NUMBER=10, IDENTIFIER=11, BLOCK_COMMENT_START=12,
		LINE_COMMENT=13, WS=14, NEWLINE=15, PUNCTUATOR=16, OTHER=17, BLOCK_COMMENT_END=18,
		BLOCK_COMMENT_STAR=19;
	public static final int
		RULE_preprocessingFile = 0, RULE_logicalLine = 1, RULE_finalLogicalLine = 2,
		RULE_defineLine = 3, RULE_malformedDefineLine = 4, RULE_otherLine = 5,
		RULE_defineDirective = 6, RULE_macroName = 7, RULE_parameterList = 8,
		RULE_macroParameter = 9, RULE_objectReplacement = 10, RULE_replacementList = 11,
		RULE_replacementTokens = 12, RULE_nonLparenReplacementToken = 13, RULE_replacementToken = 14,
		RULE_requiredHorizontal = 15, RULE_horizontal = 16, RULE_ppToken = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"preprocessingFile", "logicalLine", "finalLogicalLine", "defineLine",
			"malformedDefineLine", "otherLine", "defineDirective", "macroName", "parameterList",
			"macroParameter", "objectReplacement", "replacementList", "replacementTokens",
			"nonLparenReplacementToken", "replacementToken", "requiredHorizontal",
			"horizontal", "ppToken"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'define'", "'...'", "'('", "')'", "','", null, null,
			null, null, "'/*'", null, null, null, null, null, "'*/'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HASHHASH", "HASH", "DEFINE", "ELLIPSIS", "LPAREN", "RPAREN", "COMMA",
			"STRING_LITERAL", "CHARACTER_CONSTANT", "PP_NUMBER", "IDENTIFIER", "BLOCK_COMMENT_START",
			"LINE_COMMENT", "WS", "NEWLINE", "PUNCTUATOR", "OTHER", "BLOCK_COMMENT_END",
			"BLOCK_COMMENT_STAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CPreprocessorParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CPreprocessorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreprocessingFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CPreprocessorParser.EOF, 0); }
		public List<LogicalLineContext> logicalLine() {
			return getRuleContexts(LogicalLineContext.class);
		}
		public LogicalLineContext logicalLine(int i) {
			return getRuleContext(LogicalLineContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CPreprocessorParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CPreprocessorParser.NEWLINE, i);
		}
		public FinalLogicalLineContext finalLogicalLine() {
			return getRuleContext(FinalLogicalLineContext.class,0);
		}
		public PreprocessingFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocessingFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterPreprocessingFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitPreprocessingFile(this);
		}
	}

	public final PreprocessingFileContext preprocessingFile() throws RecognitionException {
		PreprocessingFileContext _localctx = new PreprocessingFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_preprocessingFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(36);
					logicalLine();
					setState(37);
					match(NEWLINE);
					}
					}
				}
				setState(43);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 491518L) != 0)) {
				{
				setState(44);
				finalLogicalLine();
				}
			}

			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicalLineContext extends ParserRuleContext {
		public DefineLineContext defineLine() {
			return getRuleContext(DefineLineContext.class,0);
		}
		public MalformedDefineLineContext malformedDefineLine() {
			return getRuleContext(MalformedDefineLineContext.class,0);
		}
		public OtherLineContext otherLine() {
			return getRuleContext(OtherLineContext.class,0);
		}
		public LogicalLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterLogicalLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitLogicalLine(this);
		}
	}

	public final LogicalLineContext logicalLine() throws RecognitionException {
		LogicalLineContext _localctx = new LogicalLineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_logicalLine);
		try {
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				defineLine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				malformedDefineLine();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				otherLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FinalLogicalLineContext extends ParserRuleContext {
		public DefineLineContext defineLine() {
			return getRuleContext(DefineLineContext.class,0);
		}
		public MalformedDefineLineContext malformedDefineLine() {
			return getRuleContext(MalformedDefineLineContext.class,0);
		}
		public List<PpTokenContext> ppToken() {
			return getRuleContexts(PpTokenContext.class);
		}
		public PpTokenContext ppToken(int i) {
			return getRuleContext(PpTokenContext.class,i);
		}
		public FinalLogicalLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_finalLogicalLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterFinalLogicalLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitFinalLogicalLine(this);
		}
	}

	public final FinalLogicalLineContext finalLogicalLine() throws RecognitionException {
		FinalLogicalLineContext _localctx = new FinalLogicalLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_finalLogicalLine);
		int _la;
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				defineLine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				malformedDefineLine();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(56);
					ppToken();
					}
					}
					setState(59);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 491518L) != 0) );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefineLineContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(CPreprocessorParser.HASH, 0); }
		public DefineDirectiveContext defineDirective() {
			return getRuleContext(DefineDirectiveContext.class,0);
		}
		public List<HorizontalContext> horizontal() {
			return getRuleContexts(HorizontalContext.class);
		}
		public HorizontalContext horizontal(int i) {
			return getRuleContext(HorizontalContext.class,i);
		}
		public DefineLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterDefineLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitDefineLine(this);
		}
	}

	public final DefineLineContext defineLine() throws RecognitionException {
		DefineLineContext _localctx = new DefineLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defineLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
				{
				{
				setState(63);
				horizontal();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(HASH);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
				{
				{
				setState(70);
				horizontal();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			defineDirective();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MalformedDefineLineContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(CPreprocessorParser.HASH, 0); }
		public TerminalNode DEFINE() { return getToken(CPreprocessorParser.DEFINE, 0); }
		public List<HorizontalContext> horizontal() {
			return getRuleContexts(HorizontalContext.class);
		}
		public HorizontalContext horizontal(int i) {
			return getRuleContext(HorizontalContext.class,i);
		}
		public List<PpTokenContext> ppToken() {
			return getRuleContexts(PpTokenContext.class);
		}
		public PpTokenContext ppToken(int i) {
			return getRuleContext(PpTokenContext.class,i);
		}
		public MalformedDefineLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_malformedDefineLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterMalformedDefineLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitMalformedDefineLine(this);
		}
	}

	public final MalformedDefineLineContext malformedDefineLine() throws RecognitionException {
		MalformedDefineLineContext _localctx = new MalformedDefineLineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_malformedDefineLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
				{
				{
				setState(78);
				horizontal();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(HASH);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
				{
				{
				setState(85);
				horizontal();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(DEFINE);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 491518L) != 0)) {
				{
				{
				setState(92);
				ppToken();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OtherLineContext extends ParserRuleContext {
		public List<PpTokenContext> ppToken() {
			return getRuleContexts(PpTokenContext.class);
		}
		public PpTokenContext ppToken(int i) {
			return getRuleContext(PpTokenContext.class,i);
		}
		public OtherLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterOtherLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitOtherLine(this);
		}
	}

	public final OtherLineContext otherLine() throws RecognitionException {
		OtherLineContext _localctx = new OtherLineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_otherLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 491518L) != 0)) {
				{
				{
				setState(98);
				ppToken();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefineDirectiveContext extends ParserRuleContext {
		public DefineDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineDirective; }

		public DefineDirectiveContext() { }
		public void copyFrom(DefineDirectiveContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefineContext extends DefineDirectiveContext {
		public TerminalNode DEFINE() { return getToken(CPreprocessorParser.DEFINE, 0); }
		public RequiredHorizontalContext requiredHorizontal() {
			return getRuleContext(RequiredHorizontalContext.class,0);
		}
		public MacroNameContext macroName() {
			return getRuleContext(MacroNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(CPreprocessorParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CPreprocessorParser.RPAREN, 0); }
		public List<HorizontalContext> horizontal() {
			return getRuleContexts(HorizontalContext.class);
		}
		public HorizontalContext horizontal(int i) {
			return getRuleContext(HorizontalContext.class,i);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public ReplacementListContext replacementList() {
			return getRuleContext(ReplacementListContext.class,0);
		}
		public FunctionDefineContext(DefineDirectiveContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterFunctionDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitFunctionDefine(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ObjectDefineContext extends DefineDirectiveContext {
		public TerminalNode DEFINE() { return getToken(CPreprocessorParser.DEFINE, 0); }
		public RequiredHorizontalContext requiredHorizontal() {
			return getRuleContext(RequiredHorizontalContext.class,0);
		}
		public MacroNameContext macroName() {
			return getRuleContext(MacroNameContext.class,0);
		}
		public ObjectReplacementContext objectReplacement() {
			return getRuleContext(ObjectReplacementContext.class,0);
		}
		public ObjectDefineContext(DefineDirectiveContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterObjectDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitObjectDefine(this);
		}
	}

	public final DefineDirectiveContext defineDirective() throws RecognitionException {
		DefineDirectiveContext _localctx = new DefineDirectiveContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_defineDirective);
		int _la;
		try {
			int _alt;
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				_localctx = new FunctionDefineContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				match(DEFINE);
				setState(105);
				requiredHorizontal();
				setState(106);
				macroName();
				setState(107);
				match(LPAREN);
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(108);
						horizontal();
						}
						}
					}
					setState(113);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELLIPSIS || _la==IDENTIFIER) {
					{
					setState(114);
					parameterList();
					}
				}

				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
					{
					{
					setState(117);
					horizontal();
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(123);
				match(RPAREN);
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 491518L) != 0)) {
					{
					setState(124);
					replacementList();
					}
				}

				}
				break;
			case 2:
				_localctx = new ObjectDefineContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				match(DEFINE);
				setState(128);
				requiredHorizontal();
				setState(129);
				macroName();
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 491486L) != 0)) {
					{
					setState(130);
					objectReplacement();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MacroNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CPreprocessorParser.IDENTIFIER, 0); }
		public MacroNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macroName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterMacroName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitMacroName(this);
		}
	}

	public final MacroNameContext macroName() throws RecognitionException {
		MacroNameContext _localctx = new MacroNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_macroName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public TerminalNode ELLIPSIS() { return getToken(CPreprocessorParser.ELLIPSIS, 0); }
		public List<MacroParameterContext> macroParameter() {
			return getRuleContexts(MacroParameterContext.class);
		}
		public MacroParameterContext macroParameter(int i) {
			return getRuleContext(MacroParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CPreprocessorParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CPreprocessorParser.COMMA, i);
		}
		public List<HorizontalContext> horizontal() {
			return getRuleContexts(HorizontalContext.class);
		}
		public HorizontalContext horizontal(int i) {
			return getRuleContext(HorizontalContext.class,i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitParameterList(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterList);
		int _la;
		try {
			int _alt;
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(ELLIPSIS);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				macroParameter();
				setState(155);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(142);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
							{
							{
							setState(139);
							horizontal();
							}
							}
							setState(144);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(145);
						match(COMMA);
						setState(149);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
							{
							{
							setState(146);
							horizontal();
							}
							}
							setState(151);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(152);
						macroParameter();
						}
						}
					}
					setState(157);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				}
				setState(172);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
				case 1:
					{
					setState(161);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
						{
						{
						setState(158);
						horizontal();
						}
						}
						setState(163);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(164);
					match(COMMA);
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
						{
						{
						setState(165);
						horizontal();
						}
						}
						setState(170);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(171);
					match(ELLIPSIS);
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(174);
				macroParameter();
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 290816L) != 0)) {
					{
					{
					setState(175);
					horizontal();
					}
					}
					setState(180);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(181);
				match(ELLIPSIS);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MacroParameterContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CPreprocessorParser.IDENTIFIER, 0); }
		public MacroParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macroParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).enterMacroParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPreprocessorParserListener ) ((CPreprocessorParserListener)listener).exitMacroParameter(this);
		}
	}

	public final MacroParameterContext macroParameter() throws RecognitionException {
		MacroParameterContext _localctx = new MacroParameterContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_macroParameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
